Fait quelques correctifs sur la structure

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -49,15 +49,16 @@
             <div class="container">
                 <p>
                     <a href="https://flus.io">Flus</a> est un service par
-                    abonnement de veille de l’actualité basé sur
-                    <a href="https://freshrss.org">FreshRSS</a>, un logiciel libre
-                    communautaire.
+                    abonnement de veille d’actualités basé sur
+                    <a href="https://freshrss.org">FreshRSS</a>, un logiciel
+                    libre communautaire.
+                    <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>.
                 </p>
 
                 <p>
                     © 2019 <a href="https://marienfressinaud.fr">Marien Fressinaud</a>
                     –
-                    <a href="{{ SITE_URL }}abonnement.html">S’abonner au carnet</a>
+                    <a href="https://framagit.org/marien.fressinaud/boop">propulsé par <em lang="en">Boop!</em></a>
                 </p>
             </div>
         </footer>
