--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1.0" />
         <link rel="stylesheet" href="{{ SITE_URL }}style.css">
         <link href="{{ SITE_URL }}feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Articles de {{ SITE_TITLE }}" />
+        <meta name="description" content="Flus est un service par abonnement de veille d’actualités" />
         <title>{{ SITE_TITLE }} – {{ SITE_SUBTITLE }}</title>
     </head>
 
