--- a/templates/page.html
+++ b/templates/page.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="initial-scale=1.0" />
         <link rel="stylesheet" href="{{ SITE_URL }}style.css">
         <link href="{{ SITE_URL }}feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Articles de {{ SITE_TITLE }}" />
+        {% if PAGE_DESCRIPTION %}
+            <meta name="description" content="{{ PAGE_DESCRIPTION }}" />
+        {% endif %}
         <title>{{ PAGE_TITLE }} – {{ SITE_TITLE }}</title>
     </head>
 
