--- a/templates/article.html
+++ b/templates/article.html
@@ -17,7 +17,7 @@
         </header>
 
         <main class="container container-text">
-            <article>
+            <article class="blog-article">
                 <header>
                     <h1>{{ ARTICLE_TITLE }}</h1>
 
