--- a/templates/page.html
+++ b/templates/page.html
@@ -17,7 +17,7 @@
         </header>
 
         <main class="container container-text">
-            <article>
+            <article class="blog-page">
                 <header>
                     <h1>{{ PAGE_TITLE }}</h1>
                 </header>
