--- a/templates/page.html
+++ b/templates/page.html
@@ -35,7 +35,8 @@
                     abonnement de veille d’actualités basé sur
                     <a href="https://freshrss.org">FreshRSS</a>, un logiciel
                     libre communautaire.
-                    <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>.
+                    <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>
+                    ou <a href="{{ SITE_URL }}contact.html">contactez-moi</a>.
                 </p>
 
                 <p>
