Modifie la description générique de Flus

--- a/templates/page.html
+++ b/templates/page.html
@@ -31,10 +31,9 @@
         <footer>
             <div class="container">
                 <p>
-                    <a href="https://flus.io">Flus</a> est un service par
-                    abonnement de veille d’actualités basé sur
-                    <a href="https://freshrss.org">FreshRSS</a>, un logiciel
-                    libre communautaire.
+                    <a href="https://flus.io">Flus</a> est un portail de veille
+                    de l’actualité basé sur <a href="https://freshrss.org">FreshRSS</a>,
+                    un logiciel libre communautaire.
                     <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>
                     ou <a href="{{ SITE_URL }}contact.html">contactez-moi</a>.
                 </p>
