--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="initial-scale=1.0" />
         <link rel="stylesheet" href="{{ SITE_URL }}style.css">
         <link href="{{ SITE_URL }}feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Articles de {{ SITE_TITLE }}" />
-        <meta name="description" content="Flus est un service par abonnement de veille d’actualités" />
+        <meta name="description" content="Flus est un portail de veille de l’actualité basé sur FreshRSS, un logiciel libre communautaire." />
         <title>{{ SITE_TITLE }} – {{ SITE_SUBTITLE }}</title>
     </head>
 
@@ -49,10 +49,9 @@
         <footer>
             <div class="container">
                 <p>
-                    <a href="https://flus.io">Flus</a> est un service par
-                    abonnement de veille d’actualités basé sur
-                    <a href="https://freshrss.org">FreshRSS</a>, un logiciel
-                    libre communautaire.
+                    <a href="https://flus.io">Flus</a> est un portail de veille
+                    de l’actualité basé sur <a href="https://freshrss.org">FreshRSS</a>,
+                    un logiciel libre communautaire.
                     <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>
                     ou <a href="{{ SITE_URL }}contact.html">contactez-moi</a>.
                 </p>
