Corrige minuscule typo (appaiser)

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="{{ SITE_URL }}style.css">
         <link href="{{ SITE_URL }}feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Articles de {{ SITE_TITLE }}" />
         <title>{{ SITE_TITLE }}, {{ SITE_SUBTITLE }}</title>
-        <meta name="description" content="Le carnet de flus est un blog retraçant la vie de Flus, un média social citoyen destiné à appaiser notre relation face à l’information." />
+        <meta name="description" content="Le carnet de flus est un blog retraçant la vie de Flus, un média social citoyen destiné à apaiser notre relation face à l’information." />
 
         <meta name="twitter:card" content="summary">
         <meta property="og:title" content="{{ SITE_TITLE }}" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="Le carnet de flus est un blog retraçant la vie de Flus, un média social citoyen destiné à appaiser notre relation face à l’information." />
+        <meta property="og:description" content="Le carnet de flus est un blog retraçant la vie de Flus, un média social citoyen destiné à apaiser notre relation face à l’information." />
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:url" content="{{ SITE_URL }}" />
         <meta property="og:image" content="{{ SITE_URL }}logo.svg" />
@@ -95,7 +95,7 @@
 
             <p>
                 <a href="{{ SITE_URL_FLUS }}">Flus</a> est un média social citoyen
-                destiné à appaiser notre relation face à l’information.
+                destiné à apaiser notre relation face à l’information.
                 <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>
                 pour être tenu au courant des nouveautés.
             </p>
