--- a/templates/page.html
+++ b/templates/page.html
@@ -64,7 +64,7 @@
 
             <p>
                 <a href="{{ SITE_URL_FLUS }}">Flus</a> est un média social citoyen
-                destiné à appaiser notre relation face à l’information.
+                destiné à apaiser notre relation face à l’information.
                 <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>
                 pour être tenu au courant des nouveautés.
             </p>
