Remove contact page

--- a/templates/article.html
+++ b/templates/article.html
@@ -67,16 +67,14 @@
 
             <p class="copyright">
                 Copyright © Flus 2020.<br />
-                <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio/carnet">Code source</a>
+                <a href="https://flus.fr/contact">Contact</a>&nbsp;·&nbsp;<a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio/carnet">Code source</a>
             </p>
 
             <p>
                 <a href="{{ SITE_URL_FLUS }}">Flus</a> est un média social citoyen
                 destiné à appaiser notre relation face à l’information.
                 <a href="{{ SITE_URL }}abonnement.html">Abonnez-vous au carnet</a>
-                pour être tenu au courant des nouveautés, ou
-                <a href="{{ SITE_URL }}contact.html">contactez-moi</a> pour en
-                savoir plus.
+                pour être tenu au courant des nouveautés.
             </p>
         </footer>
     </body>
