--- a/templates/blog.html
+++ b/templates/blog.html
@@ -90,7 +90,7 @@
 
             <p class="copyright">
                 Copyright © Flus 2020.<br />
-                <a href="https://flus.fr/contact">Contact</a>&nbsp;·&nbsp;<a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio/carnet">Code source</a>
+                <a href="https://flus.fr/contact">Contact</a>&nbsp;·&nbsp;<a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio">Code source</a>
             </p>
 
             <p>
