Ajoute l’article FAQ du un an

--- a/static/style.css
+++ b/static/style.css
@@ -223,6 +223,7 @@ pre code {
 
 blockquote {
     margin-left: 0;
+    margin-right: 0;
     padding: var(--space-small) var(--space-medium);
 
     color: var(--color-white);
